# c-to-rust-language-feature-bench

./: LICENSE.txt  README.md  pyproject.toml
c11_language_features_benchmark/combined_programs/combined_features/: CMakeLists.txt  combined_features  combined_features.meta.yaml  description.md
c11_language_features_benchmark/combined_programs/pathfinder/: CMakeLists.txt  description.md  pathfinder  pathfinder.meta.yaml
c11_language_features_benchmark/concepts/storage_duration_c6/: CMakeLists.txt  description.md  (+1 more)
c11_language_features_benchmark/declarations/structure_and_union_spec_c13/: CMakeLists.txt  description.md  structure_and_union_spec_c13.meta.yaml
paper_experimental_results/2026-05-06T18-03-03/: summary.json
paper_experimental_results/2026-05-10T00-24-35/: summary.json
paper_experimental_results/2026-05-11T22-01-24/: summary.json
paper_experimental_results/pass1_temp00_results/: summary.json
paper_experimental_results/pass1_temp02_results/: summary.json
paper_experimental_results/pass1_temp08_results/: summary.json
paper_experimental_results/pass3_temp00_results/: summary.json
paper_experimental_results/pass3_temp02_results/: summary.json
paper_experimental_results/pass3_temp08_results/: summary.json
paper_experimental_results/scripts/: build_feature_coverage_tables.py  generate_proxy_stats.py  generate_table2.py  generate_table5.py
test_runner/: __init__.py  __main__.py  config.json  language_features_c.yaml  llm.py  models.py  runner.py  system_prompt.txt
test_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+20273 files in other folders)
