[project]
name = "test-runner"
version = "0.1.0"
description = "C-to-Rust LLM Transpiler Benchmark"
requires-python = ">=3.11"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "pyyaml",
    "pydantic",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["test_runner*"]
